# actix-web-openapi

./: Cargo.toml  README.MD
data/v3.0/: callback-example.yaml  petstore-exanded.yaml  uspto.yaml
src/: components.rs  error.rs  external_doc.rs  lib.rs  operation.rs  path.rs  server.rs  spec.rs
tests/: integration-tests.rs
