[package]
name = "actix-web-openapi"
version = "0.0.1"
authors = ["dsietz"]
edition = "2018"
license = "MIT/Apache-2.0"

[lib]
name = "actix_web_openapi"
path = "src/lib.rs"

[dependencies]
log = "0.4.0"
error-chain = "0.10"
failure = "0.1"
semver = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
url = "1.7"
url_serde = "0.2"
actix-web = "0.7"

[dev-dependencies]
pretty_assertions = "0.5"